--- a/src/test/t2-pages/p1-stepOne/pageOne.module.css
+++ b/src/test/t2-pages/p1-stepOne/pageOne.module.css
@@ -1,5 +1,22 @@
+.wrapper {
+    display: flex;
+    border: 1px solid black;
+    flex-direction: column;
+    align-items: center;
+}
+.wrapper img {
+    width: 300px;
+    height: 300px;
+}
+.main {
+    display: flex;
 
-
+}
+.buttonBox {
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+}
 
 
 
