--- a/src/main/m1-ui/App.css
+++ b/src/main/m1-ui/App.css
@@ -19,3 +19,8 @@
 .site-layout .site-layout-background {
     background: #fff;
 }
+
+.ant-layout-sider-children {
+    background-color: #c7dbff;
+}
+
