--- a/src/test/t2-pages/p1-stepOne/pageOne.module.css
+++ b/src/test/t2-pages/p1-stepOne/pageOne.module.css
@@ -3,3 +3,19 @@
     height: 80%;
 
 }
+
+.pageOneMain_Block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+}
+.pageOneMain_Block div {
+    margin-top: 5px;
+
+}
+.pageOneMain_Block button {
+   width: 180px;
+
+}
