--- a/src/test/t2.1-pages/p6-transportMode/transportMode.module.scss
+++ b/src/test/t2.1-pages/p6-transportMode/transportMode.module.scss
@@ -1,24 +1,26 @@
-h3{
-   padding-bottom: 20px;
+h3 {
+  padding-bottom: 20px;
 }
 
 .TransportMode {
-   display: flex;
-   justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 
-   &_descr {
-      width: 50%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      p {
-         margin: 0;
-      }
-   }
+  &_descr {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 
+    p {
+      margin: 0;
+    }
+  }
 
-   &_img {
-      width: 200px;
-      padding-bottom: 15px;
-   }
+  &_img {
+    width: 200px;
+    height: 150px;
+    margin-bottom: 15px;
+  }
+
 }
