p6 in progress, calc total Value Cargo

--- a/src/test/t2.1-pages/p6-transportMode/transportMode.module.scss
+++ b/src/test/t2.1-pages/p6-transportMode/transportMode.module.scss
@@ -4,7 +4,11 @@ h3 {
 
 .TransportMode {
    display: flex;
-   justify-content: space-around;
+   justify-content: space-between;
+   &_wrapper{
+      margin: 0 auto;
+      max-width: 650px;
+   }
 
    &_descr {
       width: 50%;
