--- a/src/test/t2-pages/p2-stepTwo/pageTwo.module.css
+++ b/src/test/t2-pages/p2-stepTwo/pageTwo.module.css
@@ -2,9 +2,27 @@
     width: 100px;
     margin-top: 5px;
 }
+
 .pageTwoMain_col {
     margin: 10px;
+    text-align: center;
 }
+
 .pageTwoMain_col p {
     margin: 0;
+}
+
+.pageTwoMain_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /*justify-content: space-between;*/
+}
+
+.pageTwoMain {
+    max-width: 900px;
+    min-width: 360px;
+    text-align-last: center;
+    margin-left: auto;
+    margin-right: auto;
 }
