--- a/src/test/t2-pages/p5-pageFive/PageFive.module.css
+++ b/src/test/t2-pages/p5-pageFive/PageFive.module.css
@@ -7,6 +7,11 @@
     margin-left: auto;
     margin-right: auto;
     display: flex;
+    flex-direction: column
+}
+
+.pageFiveWrapper {
+
 }
 
 .cargoPage {
