--- a/src/test/t2-pages/p5-stepFive/PageFive.module.css
+++ b/src/test/t2-pages/p5-stepFive/PageFive.module.css
@@ -1,23 +1,28 @@
 .pageFiveMain {
     max-width: 1223px;
     min-width: 360px;
-    max-height: 500px;
     min-height: 200px;
-    text-align-last: center;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     flex-direction: column
 }
 
-.pageFiveWrapper {
+.noticeTitle {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+}
 
+.noticeDesc {
+    text-align: left;
+    line-height: 30%;
 }
 
 .cargoPage {
     display: flex;
     flex-direction: column;
-
+    padding-top: 20px;
 }
 
 .cargoModule {
@@ -26,7 +31,6 @@
     justify-content: space-between;
     max-width: 900px;
     min-width: 360px;
-    max-height: 400px;
     min-height: 200px;
 
 }
@@ -43,18 +47,13 @@
     line-height: 50%;
 }
 
+.notice {
+    padding-bottom: 20px;
+}
 
 .cargoBlock {
     display: flex;
     padding-left: 30px;
-}
-
-.block {
-
-}
-
-.desc {
-    vertical-align: top;
 }
 
 .blockImage {
