--- a/src/root/r1-ui/App.css
+++ b/src/root/r1-ui/App.css
@@ -1,31 +1,20 @@
 @import '~antd/dist/antd.css';
 
-.ant-modal-mask {
-    background-color: rgba(0, 0, 0, 0.10)
-}
-
-#components-layout-demo-custom-trigger .trigger {
-    font-size: 18px;
-    line-height: 64px;
-    padding: 0 24px;
-    cursor: pointer;
-    transition: color 0.3s;
-}
-
-#components-layout-demo-custom-trigger .trigger:hover {
-    color: #1890ff;
-}
-
-#components-layout-demo-custom-trigger .logo {
-    height: 32px;
-    background: rgba(255, 255, 255, 0.3);
-    margin: 16px;
-}
-
-.site-layout .site-layout-background {
+/*высота headerStep блока*/
+.ant-layout-header {
+    height: 48px;
     background: #fff;
 }
-
-.ant-layout-sider-children {
-    background-color: #c7dbff;
+/*  left sideBar */
+.ant-layout-sider {
+    border-right: 1px solid #1890ff;
+    max-width: 150px;
+    min-width: 150px;
+    width: 150px;
+    background-color: #fff;
+}
+/*  left sideBar кнопка открытия */
+.ant-layout-sider-trigger {
+    width: 150px;
+    background: #1890ff;
 }
