--- a/src/features/calculator/p1-stepOne/p1_1-ui/pageOne.module.css
+++ b/src/features/calculator/p1-stepOne/p1_1-ui/pageOne.module.css
@@ -1,11 +1,15 @@
+.pageOneMain {
+    text-align: center;
+    width: 65%;
+    margin: 0 auto;
+}
+
 .pageOneMain img {
     width: 70%;
-    height: 70%;
-
 }
 
 .pageOneMain_Block {
-    width: 550px;
+    max-width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,10 +25,7 @@
 }
 
 
-.pageOneMain {
-    background-color: lightgrey;
-    text-align: center;
-}
+
 
 .btn {
     background-color: blue;
