--- a/src/root/r1-ui/App.css
+++ b/src/root/r1-ui/App.css
@@ -1,31 +1,61 @@
 @import '~antd/dist/antd.css';
 
 
-.ant-layout{
+.ant-layout {
     background: #ffffff
 }
-.ant-layout-content{
-    padding-top: 70px;
-}
+
 /*высота headerStep блока*/
 .ant-layout-header {
     height: 48px;
     background: #fff;
-
+    margin-bottom: 70px;
 }
+
 /*  left sideBar */
-.ant-layout-sider {
+.ant-layout-sider  {
     border-right: 1px solid #d1e9ff;
-    max-width: 150px;
-    min-width: 150px;
-    width: 150px;
     background-color: #fff;
 }
+.ant-menu-inline-collapsed{
+    width: 40px;
+}
+
 /*  left sideBar кнопка открытия */
-.ant-layout-sider-trigger {
-    width: 150px;
+.ant-layout-sider-trigger  {
     background: #1890ff;
 }
-.ant-layout-footer{
+
+.ant-layout-footer {
     background-color: #fff;
+}
+
+/*стилизация блока content*/
+.ant-row {
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-around;
+}
+
+/* для форм на 2 и 4 странице*/
+.ant-form-item {
+    width: 300px;
+    justify-content: space-between;
+}
+
+.ant-form-horizontal .ant-form-item-control {
+    flex: inherit;
+}
+
+.ant-input,
+.ant-input-number {
+    min-width: 120px;
+}
+
+.ant-form-item-label {
+    text-align: left;
+}
+.ant-form-item-required{
+    max-width: 180px;
+    white-space: normal;
 }
